--- a/views/attempt/landing.hbs
+++ b/views/attempt/landing.hbs
@@ -16,11 +16,11 @@
         user.phone = localStorage.getItem('phone');
         var quizID = Number(localStorage.getItem('quizID'));
         if (user.id && user.language && user.church && (user.email || user.phone)) {
-            window.location.href = '/attempt/quiz-main/' + quizID;
+            window.location.href = '/attempt/quiz/' + quizID;
         } else {
             localStorage.clear();
             localStorage.setItem("quizID", Number(quizID));
-            window.location.href = '/user-details';
+            window.location.href = '/user/signup';
         }
     }
 </script>
