[add]: list question

--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -6,20 +6,21 @@
     </div>
 
     <div v-if="showScore"
-        class="quiz-main-bg row mx-0 w-100 justify-content-center align-items-center px-3 px-sm-3 px-md-5 py-3">
+        class="quiz-main-bg row mx-0 w-100 justify-content-center align-items-center px-3 px-sm-3 px-md-5">
         <div class="col-12 col-sm-12 col-md-7 mx-auto px-0">
-            <div class="col-12 col-sm-12 col-md-7 mx-auto">
+            <div class="col-12 col-sm-12 col-md-7 mx-auto pt-3">
                 <h4 class="text-center">\{{user.name}}</h4>
                 <h4 class="text-center">\{{user.church}}</h4>
             </div>
-            <div class="score-wrapper mt-4 mx-auto d-flex justify-content-center align-items-center">
+            <div class="score-wrapper mx-auto d-flex justify-content-center align-items-center">
                 <img class="position-relative" src="/img/score-img.svg" width="280px" alt="">
                 <div class="position-absolute">
                     <h1 class="font-weight-bold display-1 text-center">\{{myScore}}</h1>
                     <h1 class="text-center">out of \{{totalScore}}</h1>
                 </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-7 mx-auto mt-3 pt-3 pt-sm-5 pt-md-5">
+            <h3 class="text-center my-3">time-taken: \{{timeTook}} sec</h3>
+            <div class="col-12 col-sm-12 col-md-7 mx-auto pt-3 pt-sm-5 pt-md-5">
                 <button @click="viewResult()" class="btn  p-2 pt-3 option-card"
                     style="background-color: #07c806; font-size: 1.5rem">View Responses</button>
                 <a @click="logout()">
@@ -31,13 +32,20 @@
     </div> --}}
 </div>
 
-<div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5 py-5">
+<div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5 justify-content-start">
     <div v-if="questions.length">
-        <div class="p-2 p-sm-3 p-md-5 text-center question-card">
-            <h5>\{{currentQuestion.question[language]}}</h5>
+        <div class="p-2 p-sm-3 p-md-5 mt-4 text-center question-card">
+            <h6>\{{currentQuestion.question[language]}}</h6>
         </div>
+        <table v-if="currentQuestion.list && currentQuestion.list.length" class="table table-striped">
+            <tbody>
+                <tr v-for="(item, index) in currentQuestion.list[language]">
+                    <td>\{{item}}</td>
+                </tr>
+            </tbody>
+        </table>
         <div class="row mx-0 w-100 my-5">
-            <div class="col-12 col-sm-12 col-md-8">
+            <div class="col-12 col-sm-12 col-md-8 px-0">
                 <div class="radio-toolbar">
                     <div v-for="(option, index) in currentQuestion.options[language]" class="w-100">
                         <input type="radio" disabled="true" :id="'radio-question-' + currentQuestionNo + '-' + index"
@@ -46,9 +54,9 @@
                             v-model="selectedOption">
                         <label class="d-flex align-items-center justify-content-between w-full text-center"
                             :for="'radio-question-' + currentQuestionNo + '-' + index">
-                            <h5 class="mb-0 mr-2 px-3 pb-2 pt-3 option-card"
+                            <p class="mb-0 mr-2 px-3 pb-2 pt-3 option-card"
                                 :class="{'correct-answer': currentQuestion.answer[language] === option,  'bg-danger': (option === currentQuestion.user_answer && currentQuestion.answer[language] !== selectedOption)}">
-                                \{{option}}</h5>
+                                \{{option}}</p>
                             <img :src="(index === 0 && '/img/option-A.svg') || (index === 1 && '/img/option-B.svg') || (index === 2 && '/img/option-C.svg')"
                                 style="width: 60px;" alt="">
                         </label>
