--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -231,11 +231,14 @@ button#search_icon {
   .quiz-main-bg {
     background-image: url(/img/quiz-main-img.svg);
     background-repeat: no-repeat;
-    height: 100vh !important;
-    width: 100vw;
+    min-height: 100vh !important;
+    min-width: 100vw;
     margin: 0 !important;
     background-size: 100%;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .pre-start-bg {
     background-image: url(/img/pre-start-bg.svg);
@@ -270,8 +273,8 @@ button#search_icon {
   .quiz-main-bg {
     background-image: url(/img/quiz-main-img.svg);
     background-repeat: no-repeat;
-    height: 100vh !important;
-    width: 100vw;
+    min-height: 100vh !important;
+    min-width: 100vw;
     margin: 0 !important;
     background-size: cover;
     background-position: center;
