[add]: minor UI changes

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -233,6 +233,8 @@ button#search_icon {
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0 !important;
     background-size: 100%;
     background-position: center;
@@ -275,6 +277,8 @@ button#search_icon {
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0 !important;
     background-size: cover;
     background-position: center;
