--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,6 +185,8 @@ button#search_icon {
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0 !important;
     background-size: 100%;
     background-position: center;
@@ -221,6 +223,8 @@ button#search_icon {
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0 !important;
     background-size: cover;
     background-position: center; }
