--- a/views/attempt/quiz-main.hbs
+++ b/views/attempt/quiz-main.hbs
@@ -12,15 +12,17 @@
     <div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5">
         <div v-if="questions.length">
             <div class="p-2 p-sm-3 p-md-5 mt-4 text-center question-card">
-                <h6>\{{currentQuestion.question[language]}}</h6>
+                <h5>\{{currentQuestion.question[language]}}</h5>
             </div>
-            <table v-if="currentQuestion.list && currentQuestion.list.length" class="table table-striped">
-                <tbody>
-                    <tr v-for="(item, index) in currentQuestion.list[language]">
-                        <td>\{{item}}</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive mt-4">
+                <table v-if="currentQuestion.list && currentQuestion.list[language].length" class="table table-striped">
+                    <tbody>
+                        <tr v-for="(item, index) in currentQuestion.list[language]">
+                            <td style="white-space: nowrap;">\{{item}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <div class="row mx-0 w-100 mt-5">
                 <div class="col-12 col-sm-12 col-md-8 mb-4 px-0">
                     <div class="radio-toolbar">
@@ -41,13 +43,13 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 d-flex justify-content-between align-items-center">
                     <div class="d-block d-sm-block d-md-none">
-                        <div class="timer-wrapper">
-                            <h3 class="text-white h1 mb-0 mt-2">\{{currentQuestionNo + 1}} / \{{questions.length}}</h3>
+                        <div class="timer-wrapper" style="width: 100px; height: 100px;">
+                            <h3 class="text-white h1 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h3>
                         </div>
                         <p class="text-primary text-center font-weight-bold">Question</p>
                     </div>
                     <div class="mx-md-auto">
-                        <div class="timer-wrapper" style="width: 100px; height: 100px;">
+                        <div class="timer-wrapper">
                             <h3 class="text-white display-1 mb-0 mt-2">\{{getCurrentTimer}}</h3>
                         </div>
                         <p class="text-primary text-center font-weight-bold">Time left</p>
