[fix]: minor ui bugs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,7 +207,14 @@ button#search_icon {
     height: 100vh !important;
     width: 100vw;
     margin: 0 !important;
-    background-position: center; } }
+    background-position: center; }
+  .thank-you-wrapper {
+    background-image: url(/img/thank-you-wrapper.svg);
+    background-repeat: no-repeat;
+    margin: 0 !important;
+    background-size: cover;
+    background-position: center;
+    padding: 2rem 0; } }
 
 @media (min-width: 576px) {
   .quiz-home-bg {
@@ -227,7 +234,10 @@ button#search_icon {
     width: 100%;
     margin: 0 !important;
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
   .pre-start-bg {
     background-image: url(/img/pre-start-bg.svg);
     background-repeat: no-repeat;
@@ -243,7 +253,14 @@ button#search_icon {
     width: 100vw;
     margin: 0 !important;
     background-size: 100%;
-    background-position: center; } }
+    background-position: center; }
+  .thank-you-wrapper {
+    background-image: url(/img/thank-you-wrapper.svg);
+    background-repeat: no-repeat;
+    margin: 0 !important;
+    background-size: contain;
+    background-position: center;
+    padding: 2rem 0; } }
 
 .br-20px {
   border-radius: 20px !important; }
@@ -309,14 +326,6 @@ select option[disabled] {
   font-weight: bold;
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity)); }
-
-.thank-you-wrapper {
-  background-image: url(/img/thank-you-wrapper.svg);
-  background-repeat: no-repeat;
-  margin: 0 !important;
-  background-size: cover;
-  background-position: center;
-  padding: 2rem 0; }
 
 .score-wrapper {
   background-image: url(/img/score-wrapper.svg);
