--- a/views/attempt/quiz-end.hbs
+++ b/views/attempt/quiz-end.hbs
@@ -12,13 +12,13 @@
             <div class="thank-you-wrapper d-flex justify-content-center align-items-center">
                 <img src="/img/thank-you-img.svg" alt="">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 mx-auto mt-md-4">
                 <h5 class="p-2 pt-3 option-card" style="border-radius: 15px !important; white-space:normal !important">
                 <span>Thank you for you answers</span>
                 </h5>
             </div>
         </div>
-        <div class="col-md-5 mt-3 pt-3 pt-sm-5 pt-md-5">
+        <div class="col-md-5 mx-auto mt-3 pt-3 pt-sm-5 pt-md-5">
             <button onclick="viewResult()" class="btn p-2 pt-3 option-card" style="background-color: #07c806; font-size: 1.5rem">View
                 Score</button>
         </div>
