--- a/views/attempt/quiz-main.hbs
+++ b/views/attempt/quiz-main.hbs
@@ -10,8 +10,8 @@
     </div>
 
     <div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5">
-        <div v-if="questions.length">
-            <div class="p-2 p-sm-3 p-md-5 mt-4 text-center question-card">
+        <div v-if="questions.length" class="pt-md-4">
+            <div class="p-2 p-sm-3 p-md-5 mt-4 mt-sm-4 mt-md-0 text-center question-card">
                 <h5>\{{currentQuestion.question[language]}}</h5>
             </div>
             <div class="table-responsive mt-4">
@@ -57,8 +57,8 @@
                 </div>
             </div>
             <div class="w-100 mt-2 mx-auto d-none d-sm-none d-md-block">
-                <div class="timer-wrapper mx-auto">
-                    <h3 class="text-white h1 mb-0 mt-2">\{{currentQuestionNo + 1}} / \{{questions.length}}</h3>
+                <div class="timer-wrapper mx-auto" style="width: 80px; height: 60px; border-radius: 15px !important;">
+                    <h3 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}} / \{{questions.length}}</h3>
                 </div>
                 <p class="text-primary text-center font-weight-bold">Question</p>
             </div>
