--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,7 +188,7 @@ button#search_icon {
     height: 100%;
     width: 100%;
     margin: 0 !important;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     display: flex;
     flex-direction: column;
