--- a/views/attempt/quiz-main.hbs
+++ b/views/attempt/quiz-main.hbs
@@ -12,7 +12,7 @@
     <div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5">
         <div v-if="questions.length" class="pt-md-4">
             <div class="p-2 p-sm-3 p-md-5 mt-4 mt-sm-4 mt-md-0 text-center question-card">
-                <h5>\{{currentQuestion.question[language]}}</h5>
+                <h5 class="font-weight-bold">\{{currentQuestion.question[language]}}</h5>
             </div>
             <div class="table-responsive mt-4">
                 <table v-if="currentQuestion.list && currentQuestion.list[language].length" class="table table-striped">
