--- a/views/attempt/signup.hbs
+++ b/views/attempt/signup.hbs
@@ -41,7 +41,7 @@
       <p v-if="formError && formError.preferred_language" class="ml-5 mt-1 mb-0 pl-3 text-danger text-sm">
         \{{formError.preferred_language}}
       </p>
-      <p class="mt-4 mb-0 pl-3 text-center text-sm">Existing user? <a class="py-2 pr-2" href="/user/login">Login</a></p>
+      <p class="mt-4 mb-0 pl-3 font-weight-bold text-center text-sm">Existing user? <a class="py-2 pr-2" href="/user/login">Login</a></p>
       <button v-if="showNext" role="button" type="submit" class="bg-transparent outline-none btn bottom-next">
         <img src="/img/next.svg" alt="" />
       </button>
