--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,7 +192,7 @@ button#search_icon {
     background-position: center;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: space-between; }
   .pre-start-bg {
     background-image: url(/img/pre-start-bg.svg);
     background-repeat: no-repeat;
@@ -237,7 +237,7 @@ button#search_icon {
     background-position: center;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: space-between; }
   .pre-start-bg {
     background-image: url(/img/pre-start-bg.svg);
     background-repeat: no-repeat;
@@ -275,6 +275,15 @@ button#search_icon {
   padding: 0.5rem 1rem !important;
   font-weight: bold;
   border: 1px solid #000 !important; }
+
+.bottom-0 {
+  bottom: 0 !important; }
+
+.left-0 {
+  left: 0 !important; }
+
+.right-0 {
+  right: 0 !important; }
 
 .bottom-next {
   position: fixed;
@@ -335,7 +344,7 @@ select option[disabled] {
   margin: 0 !important;
   background-size: cover;
   background-position: center;
-  padding: 2rem 0; }
+  padding: 4rem 0; }
 
 .correct-answer {
   background-color: #07c806 !important; }
