--- a/views/attempt/login.hbs
+++ b/views/attempt/login.hbs
@@ -1,6 +1,6 @@
 <script src="/js/attempt/login.js"></script>
 
-<div id="user-login-page" class="quiz-main-bg p-3">
+<div id="user-login-page" class="quiz-main-bg justify-content-center p-3">
   <div class="col-12 col-sm-10 col-md-5 mx-auto d-flex flex-column align-items-center justify-content-center h-100">
     <div>
       <h3 class="text-center font-weight-bold">User Login</h3>
@@ -28,7 +28,7 @@
         \{{formError.preferred_language}}
       </p>
       <p class="mt-4 mb-0 pl-3 font-weight-bold text-center text-sm">New user? <a class="py-2 pr-2" href="/user/signup">Signup</a></p>
-      <button v-if="showNext" role="button" type="submit" class="bg-transparent outline-none btn bottom-next">
+      <button v-if="showNext" role="button" type="submit" class="bg-transparent outline-none btn right-0 bottom-next">
         <img src="/img/next.svg" alt="" />
       </button>
     </form>
