--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -13,7 +13,7 @@
                 <h4 class="text-center">\{{user.church}}</h4>
             </div>
             <div class="score-wrapper mx-auto d-flex justify-content-center align-items-center">
-                <img class="position-relative" src="/img/score-img.svg" width="280px" alt="">
+                <img class="position-relative" src="/img/score-img.svg" width="250px" alt="">
                 <div class="position-absolute">
                     <h1 class="font-weight-bold display-1 text-center">\{{myScore}}</h1>
                     <h1 class="text-center">out of \{{totalScore}}</h1>
@@ -23,7 +23,7 @@
             <div class="col-12 col-sm-12 col-md-7 mx-auto pt-3 pt-sm-5 pt-md-5">
                 <button @click="viewResult()" class="btn  p-2 pt-3 option-card"
                     style="background-color: #07c806; font-size: 1.5rem">View Responses</button>
-                <a @click="logout()">
+                <a class="cursor-pointer" @click="logout()">
                     <p class="text-center text-primary mt-3" style="font-size: 1.5rem">Logout</p>
                 </a>
             </div>
@@ -32,20 +32,22 @@
     </div> --}}
 </div>
 
-<div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5 justify-content-start">
-    <div v-if="questions.length">
+<div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5 justify-content-between">
+    <div v-if="questions.length" class="col-12 col-sm-8 col-md-7 px-0 mx-auto pt-md-4">
         <div class="p-2 p-sm-3 p-md-5 mt-4 text-center question-card">
             <h5 class="font-weight-bold">\{{currentQuestion.question[language]}}</h5>
         </div>
-        <table v-if="currentQuestion.list && currentQuestion.list.length" class="table table-striped">
-            <tbody>
-                <tr v-for="(item, index) in currentQuestion.list[language]">
-                    <td>\{{item}}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="row mx-0 w-100 my-5">
-            <div class="col-12 col-sm-12 col-md-8 px-0">
+        <div class="table-responsive mt-4">
+            <table v-if="currentQuestion.list && currentQuestion.list[language].length" class="table table-striped">
+                <tbody>
+                    <tr v-for="(item, index) in currentQuestion.list[language]">
+                        <td style="white-space: nowrap;">\{{item}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="row mx-0 w-100 mt-3 mt-sm-4 mt-md-5">
+            <div class="w-100 px-0">
                 <div class="radio-toolbar">
                     <div v-for="(option, index) in currentQuestion.options[language]" class="w-100">
                         <input type="radio" disabled="true" :id="'radio-question-' + currentQuestionNo + '-' + index"
@@ -63,21 +65,38 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-12 col-sm-12 col-md-4 d-flex justify-content-between align-items-center">
-            <div class="text-center">
-                <div class="timer-wrapper" style="width: 100px; height: 80px; border-radius: 15px !important;">
-                    <h5 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h5>
+            <div
+                class="d-none d-sm-none d-md-flex justify-content-between align-items-center position-fixed left-0 right-0 bottom-0 px-3">
+                <div>
+                    <div class="timer-wrapper" style="width: 100px; height: 80px; border-radius: 15px !important;">
+                        <h5 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h5>
+                    </div>
+                    <p class="text-dark mt-1 text-center font-weight-bold">
+                        \{{language === 'english' ? 'Question' : 'வினா என்'}}</p>
                 </div>
-                <p class="text-primary mt-1 text-center font-weight-bold">\{{language === 'english' ? 'Question' : 'வினா என்'}}</p>
+                <div>
+                    <button @click="nextResponse" role="button" type="submit"
+                        class="bg-transparent outline-none btn px-0">
+                        <img src="/img/next.svg" alt="" />
+                    </button>
+                </div>
             </div>
         </div>
-        <button @click="nextResponse" role="button" type="submit" class="bg-transparent outline-none btn bottom-next">
-            <img src="/img/next.svg" alt="" />
-        </button>
     </div>
     <div v-else>
         <h3>No questions to show, please come back later..</h3>
+    </div>
+    <div class="d-flex d-sm-flex d-md-none justify-content-between align-items-end">
+        <div class="text-center">
+            <div class="timer-wrapper" style="width: 100px; height: 80px; border-radius: 15px !important;">
+                <h5 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h5>
+            </div>
+            <p class="text-primary mt-1 mb-0 text-center font-weight-bold">
+                \{{language === 'english' ? 'Question' : 'வினா என்'}}</p>
+        </div>
+        <button @click="nextResponse" role="button" type="submit" class="bg-transparent outline-none btn px-0">
+            <img src="/img/next.svg" alt="" />
+        </button>
     </div>
 </div>
 </div>
