[change]: placeholder color change for create questionnaire

--- a/views/questionnaire/create.hbs
+++ b/views/questionnaire/create.hbs
@@ -1,3 +1,4 @@
+ <link rel='stylesheet' href='/css/create.css' />
 <script src="/js/questionnaire/create.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <div class="main-header bg-secondary">
