--- a/views/attempt/signup.hbs
+++ b/views/attempt/signup.hbs
@@ -3,7 +3,7 @@
 <div id="user-details-page" class="quiz-main-bg justify-content-center p-3">
   <div class="col-12 col-sm-10 col-md-5 mx-auto d-flex flex-column align-items-center justify-content-center h-100">
     <div>
-      <h3 class="text-center font-weight-bold">User Signup</h3>
+      <h3 class="text-center text-black font-weight-bold">User Signup</h3>
     </div>
     <form novalidate="true" @submit="next($event)" class="mt-3 mb-5 w-100">
       <div class="d-flex justify-content-center align-items-center">
@@ -17,7 +17,7 @@
         <img src="/img/church.svg" alt="" />
         <input id="church" type="text" required="true" name="church" @focus="toggleNextBtn(false, 'church')"
           @blur="toggleNextBtn(true, 'church')" v-model="user.church"
-          class="bg-transparent text-black ml-3 form-control br-20px" placeholder="Church" />
+          class="bg-transparent text-black ml-3 form-control br-20px" placeholder="Assembly" />
       </div>
       <p v-if="formError && formError.church" class="ml-5 mt-1 mb-0 pl-3 text-danger text-sm">\{{formError.church}}</p>
       <div class="d-flex justify-content-center align-items-center mt-4">
@@ -41,7 +41,7 @@
       <p v-if="formError && formError.preferred_language" class="ml-5 mt-1 mb-0 pl-3 text-danger text-sm">
         \{{formError.preferred_language}}
       </p>
-      <p class="mt-4 mb-0 pl-3 font-weight-bold text-center text-sm">Existing user? <a class="py-2 pr-2" href="/user/login">Login</a></p>
+      <p class="mt-4 mb-0 pl-3 font-weight-bold text-black text-center text-sm">Existing user ? <a class="py-2 pr-2" href="/user/login">Login</a></p>
       <button v-if="showNext" role="button" type="submit" class="bg-transparent outline-none btn right-0 bottom-next">
         <img src="/img/next.svg" alt="" />
       </button>
