--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,7 +181,7 @@ button#search_icon {
     background-size: cover;
     background-position: center; }
   .quiz-main-bg {
-    background-image: url(/img/user-details-bg.svg);
+    background-image: url(/img/quiz-main-img1.svg);
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
@@ -226,7 +226,7 @@ button#search_icon {
     background-size: cover;
     background-position: center; }
   .quiz-main-bg {
-    background-image: url(/img/user-details-bg.svg);
+    background-image: url(/img/quiz-main-img1.svg);
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
@@ -385,3 +385,12 @@ textarea:-ms-input-placeholder {
 
 textarea::placeholder {
   color: #000; }
+
+.border-pink {
+  border: 3px solid #FD00B6; }
+
+.br-15px {
+  border-radius: 15px; }
+
+.br-50pc {
+  border-radius: 50%; }
