--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -229,7 +229,7 @@ button#search_icon {
     background-position: center;
   }
   .quiz-main-bg {
-    background-image: url(/img/user-details-bg.svg);
+    background-image: url(/img/quiz-main-img1.svg);
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
@@ -282,7 +282,7 @@ button#search_icon {
     background-position: center;
   }
   .quiz-main-bg {
-    background-image: url(/img/user-details-bg.svg);
+    background-image: url(/img/quiz-main-img1.svg);
     background-repeat: no-repeat;
     min-height: 100vh !important;
     min-width: 100vw;
@@ -476,4 +476,16 @@ textarea:-ms-input-placeholder {
 }
 textarea::placeholder {
   color: #000;
+}
+
+.border-pink {
+  border: 3px solid #FD00B6
+}
+
+.br-15px {
+  border-radius: 15px;
+}
+
+.br-50pc {
+  border-radius: 50%;
 }
