[fix]: minor UI

--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -9,7 +9,7 @@
         class="quiz-main-bg row mx-0 w-100 justify-content-center align-items-center px-3 px-sm-3 px-md-5">
         <div class="col-12 col-sm-12 col-md-7 mx-auto px-0">
             <div class="col-12 col-sm-12 col-md-7 mx-auto">
-                <h4 class="text-center">\{{user.name}}</h4>
+                <h4 class="text-center mt-3">\{{user.name}}</h4>
                 <h4 class="text-center mb-0">\{{user.church}}</h4>
             </div>
             <div class="score-wrapper mx-auto d-flex justify-content-center align-items-center">
