[fix]: score-desc and time-asc

--- a/views/attempt/login.hbs
+++ b/views/attempt/login.hbs
@@ -20,7 +20,7 @@
           aria-placeholder="Language" v-model="user.preferred_language" name="preferred_language" id=""
           @focus="toggleNextBtn(true, 'preferred_language')" @onchange="toggleNextBtn(true, 'preferred_language')">
           <option disabled="true" selected="true" value="">Language</option>
-          {{!-- <option value="english">English</option> --}}
+          <option value="english">English</option>
           <option value="tamil">தமிழ்</option>
         </select>
       </div>
