--- a/views/attempt/leaderboard.hbs
+++ b/views/attempt/leaderboard.hbs
@@ -12,6 +12,7 @@
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Church</th>
+            <th scope="col">Language</th>
             <th scope="col">Score</th>
             <th style="min-width: 125px;" scope="col">Time-Taken</th>
           </tr>
@@ -21,6 +22,7 @@
             <th scope="row">\{{index + 1}}</th>
             <td>\{{item.participant && item.participant.name}}</td>
             <td>\{{item.participant && item.participant.church}}</td>
+            <td>\{{item.language}}</td>
             <td>\{{item.my_score}}</td>
             <td>\{{item.time_taken}}</td>
           </tr>
