--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -35,7 +35,7 @@
 <div v-if="showQuiz" class="quiz-main-bg px-3 px-sm-3 px-md-5 justify-content-between">
     <div v-if="questions.length" class="col-12 col-sm-8 col-md-7 px-0 mx-auto pt-md-4">
         <div class="p-2 p-sm-3 p-md-5 mt-4 text-center question-card">
-            <h4 class="font-weight-bold text-center" v-html="currentQuestion.question[language]"></h4>
+            <h4 v-html="currentQuestion.question[language]" class="font-weight-bold text-center" :class="{'h5': isPhone, 'h4': !isPhone, }"></h4>
         </div>
         <div class="table-responsive mt-4">
             <table v-if="currentQuestion.list && currentQuestion.list[language].length" class="table table-striped">
