--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -87,12 +87,11 @@
         <h3>No questions to show, please come back later..</h3>
     </div>
     <div class="d-flex d-sm-flex d-md-none justify-content-between align-items-center mb-3">
+        <img v-if="currentQuestionNo != 0" @click="prevResponse" src="/img/prev.png" width="60px" alt="">
         <div class="text-center">
             <div class="timer-wrapper border-pink" style="width: 100px; height: 50px; border-radius: 15px !important;">
                 <h5 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h5>
             </div>
-            {{!-- <p class="text-primary mt-1 mb-0 text-center font-weight-bold">
-                \{{language === 'english' ? 'Question' : 'வினா என்'}}</p> --}}
         </div>
         <button @click="nextResponse" role="button" type="submit" class="bg-transparent outline-none btn px-0">
             <img src="/img/next.svg" alt="" />
