--- a/views/questionnaire/upsert.hbs
+++ b/views/questionnaire/upsert.hbs
@@ -51,26 +51,25 @@
                             class="form-text text-danger pl-1">\{{formError?.questions?.length &&
                             formError?.questions[index]?.question?.tamil}}</small>
                         <div class="d-flex align-items-center my-3">
-                            <label :for="'question-show-list' + index" class="my-2">Show list: </label>
+                            <label :for="'question-show-list' + index" class="my-2">Add list: </label>
                             <input type="checkbox" class="mx-2" :id="'question-show-list' + index"
                                 v-model="item.showList">
                         </div>
                         <div v-if="item.showList">
-                            <label class="my-2">List: </label>
-                        <div class="d-flex">
-                            <div class="col-6 pl-0">
+                            <label class="my-2">List in Englist </label>
+                            <div class="col-12 pl-0">
                                 <div v-for="(option, idx) in item.list.english">
                                     <input type="text" class="form-control mb-3" :id="'english-option-' + idx"
                                         v-model="item.list.english[idx]" placeholder="List in english">
                                 </div>
                             </div>
-                            <div class="col-6 px-0">
+                            <label class="my-2">List in Tamil </label>
+                            <div class="col-12 px-0">
                                 <div v-for="(option, idx) in item.list.tamil">
                                     <input type="text" class="form-control mb-3" :id="'tamil-option-' + idx"
                                         v-model="item.list.tamil[idx]" placeholder="List in tamil">
                                 </div>
                             </div>
-                        </div>
                         </div>
                         <label class="my-2">Options: </label>
                         <div class="d-flex">
