--- a/views/attempt/quiz-result.hbs
+++ b/views/attempt/quiz-result.hbs
@@ -67,6 +67,7 @@
             </div>
             <div
                 class="d-none d-sm-none d-md-flex justify-content-between align-items-center position-fixed left-0 right-0 bottom-0 px-3 mb-3">
+                <img v-if="currentQuestionNo != 0" class="cursor-pointer" @click="prevResponse" src="/img/prev.png" width="60px" alt="">
                 <div>
                     <div class="timer-wrapper border-pink br-15px" style="width: 100px; height: 50px;">
                         <h5 class="text-white h3 mb-0 mt-2">\{{currentQuestionNo + 1}}/\{{questions.length}}</h5>
@@ -77,7 +78,7 @@
                 <div>
                     <button @click="nextResponse" role="button" type="submit"
                         class="bg-transparent outline-none btn px-0">
-                        <img src="/img/next.svg" alt="" />
+                        <img src="/img/next.svg" class="cursor-pointer" alt="" />
                     </button>
                 </div>
             </div>
